# byteweave

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .prettierrc.json  CMakeLists.txt  CMakePresets.json  README.md
.github/actions/sccache-stats/: action.yml
.github/actions/setup-build/: action.yml
.github/actions/setup-cmake-if-needed/: action.yml
.github/actions/setup-ninja/: action.yml
.github/actions/setup-python-if-needed/: action.yml
.github/actions/setup-sccache/: action.yml
.github/workflows/: CI.yml  build.yml  lint.yml  package.yml
cmake/: ByteweaveCTest.cmake  byteweaveConfig.cmake.in  copy_compile_commands.cmake
examples/: CMakeLists.txt  minimal.cpp
examples/minimal/: main.cpp
include/byteweave/: base64.hpp  byteweave.hpp  config.hpp  export.hpp  hex.hpp  types.hpp  varint.hpp  version.hpp.in
include/byteweave/detail/: base64.inl  hex.inl  preamble.hpp  varint.inl
src/: base64.cpp  hex.cpp  varint.cpp
tests/: CMakeLists.txt  min_smoke.cpp
tests/roundtrip/foo/: main.cpp
tests/unit/smoke/: main.cpp
tests/unit/version_config/: main.cpp
tools/: amalgamate.py  format.py  tidy.py
